java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateElement4.pass
/*
 * CreateElement4.java
 *
 * Created on March 21, 2005, 10:21 PM
 *
 * To change this template, choose Tools | Options and locate the template under
 * the Source Creation and Management node. Right-click the template and choose
 * Open. You can then make changes to the template in the Source Editor.
 */

package org.netbeans.test.java.hints;

/**
 *
 */
public class CreateElement4 {
    
    /** Creates a new instance of CreateElement4 */
    public CreateElement4() {
    }
    
    public static final void main(String[] args) {
        Test.test("", "", 12);
    }

    private static class Test {
        private static void test(String string, String string0, int i) {
            throw new UnsupportedOperationException("Not yet implemented");
        }
        
    }
}
